--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@ body {
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 1160px;
-    margin: 0 auto;
-}
 
 .add-btn {
     display: flex;
@@ -27,21 +23,27 @@ body {
     cursor: pointer;
 }
 
+.container {
+    max-width: 1160px;
+    margin: 0 auto;
+}
+
+/* header design */
+
 header {
     width: 100%;
     height: 677px;
     background-color: #2d25a0;
-
 }
 
 .animation img {
     width: 30px;
     height: 30px;
-    transition: transform 2s;
+    transition: transform 2s ease-out;
 }
 
 header:hover .animation img {
-    transform: translate(500px);
+    transform: translate(1160px);
 }
 
 
@@ -184,6 +186,12 @@ footer {
         align-items: center;
         justify-content: center;
     }
+
+    header:hover .animation img {
+        transform: translate(90vw);
+    }
+
+
 }
 
 
@@ -197,5 +205,9 @@ footer {
 
     .players {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    header:hover .animation img {
+        transform: translate(90vw);
     }
 }
